2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: update MSVC CFLAGS_OPT to -O2, remove
	-Gs (included in -O2) and -GD (outdated).  Use "link -lib" instead
	of "lib" binary and remove -YX for MSVC7 portability.  Add
	-fomit-frame-pointer for gcc OPT compiles. [Bug 1092952, 1091967]

2004-12-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/*.tcl: Add [package require Tk] to all the widget
	demo scripts so they follow standard practice better. [FRQ 815118]

2004-12-20  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkFileFilter.c:
	* generic/tkFileFilter.h: 
	* macosx/tkMacOSXDialog.c:
	* win/tkWinDialog.c:
	* tests/filebox.test:
	* tests/winDialog.test: Corrected handling of MacOS file types
	in tk_*file dialogs [Bug 1083878].

2004-12-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/panedwindow.n: Fix silly typo. [Bug 1087842]

2004-12-19  Chengye Mao  <chengye.geo@yahoo.com>

	* win/tkWin.h, win/tkWinEmbed.h: Make embedding work better on Windows.
	* win/tkWinWm.c, win/tkWinX.c:   [Bugs 222667, 831627, 842945, 1024364]

2004-12-17  Chengye Mao  <chengye.geo@yahoo.com>

	* generic/tkFrame.c:  Make container windows display their
	* generic/tkWindow.c: background when they don't have content.

2004-12-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tk.spec, macosx/Tk-Info.plist, macosx/Wish-Info.plist: 
	* macosx/Wish.pbproj/project.pbxproj, README, win/configure.in: 
	* unix/configure.in, generic/tk.h: Bump version to 8.5a3.

2004-12-09  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: synced with tcl/unix/tcl.m4
	* unix/configure: regen

2004-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock):
	Added guards so that rescanning for the complex-alpha check is not
	done in the common case of creating a simple image a bit at a
	time, or any other time where the image was simple before and the